--- a/MarkCorrelation/MarkCorrelation.csproj
+++ b/MarkCorrelation/MarkCorrelation.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{6B879017-DCA3-4DB6-9C19-B56360F97385}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>MarkCorrelation</RootNamespace>
     <AssemblyName>MarkCorrelation</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -32,6 +32,9 @@
     <Externalconsole>true</Externalconsole>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="HtmlAgilityPack, Version=1.6.5.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.6.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
@@ -53,12 +56,13 @@
     <Compile Include="Helpers\CorrelationCalculator.cs" />
     <Compile Include="Helpers\LinkHelper.cs" />
     <Compile Include="Helpers\SessionCache.cs" />
+    <Compile Include="ILogger.cs" />
     <Compile Include="Models\Mark.cs" />
     <Compile Include="Models\ModulesPage.cs" />
     <Compile Include="Models\SemesterLink.cs" />
     <Compile Include="Models\Session.cs" />
     <Compile Include="Models\SubjectLink.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="CorrelationFinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Tutor.cs" />
     <Compile Include="Models\Student.cs" />
@@ -85,6 +89,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
